--- a/tmall_qte/manifest.json
+++ b/tmall_qte/manifest.json
@@ -2,7 +2,7 @@
   "name": "tmall qte 2012/06/15",
   "version": "1.0",
   "permissions": [
-    "tabs", "http://*/*", "https://*/*", "chrome-devtools://devtools/*"
+    "tabs", "http://*/*", "https://*/*"
   ],
   "browser_action": {
       "default_title": "inject to tmall qte.",
